# memlayer-proxy

./: .gitignore  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
alembic/versions/: 26f54c313fa2_add_procedural_memories_table.py  68851d6e6b5a_add_raw_observations_table.py
api/: tasks.py
core/: auth.py  consolidation.py  llm.py  prompts.py  retrieval.py
db/: graph_db.py  postgres_repo.py  redis_db.py
docs/: API_REFERENCE.md  index.md  operation_modes.md
docs/basics/: overview.md  quickstart.md  streaming.md
docs/providers/: README.md  ollama.md
docs/tuning/: intervals.md  operation_mode.md
examples/: README.md
examples/01_basics/: getting_started.py
examples/02_search_tiers/: search_tiers_demo.py
examples/05_providers/: README.md  claude_example.py  gemini_example.py  llama_server_example.py  ollama_example.py  openai_example.py
examples/06_api/: direct_knowledge_ingestion.py  streaming_example.py
examples/07_server/: README.md  multi_user_example.py  run_server.py  test_client.py
memlayer/: __init__.py  client.py  config.py  ml_gate.py  services.py
memlayer/server/: __init__.py  __main__.py  config.py  models.py  proxy.py
memlayer/storage/: __init__.py  chroma.py  memgraph.py  networkx.py
memlayer/wrappers/: __init__.py  claude.py  gemini.py  llama_server.py  ollama.py  openai.py
old/: chat.html
old/alembic/: env.py
old/alembic/versions/: 782743638d2b_create_initial_tables.py  88e258b43ff6_add_users_table_for_authentication.py
old/api/: chat.py  conversations.py  main.py  status.py  users.py
old/core/: celery_app.py  cognitive_types.py  config.py  controller.py
old/db/: database.py  models.py
old/memory_bank/: client.py
old/memory_bank/storage/: sqlite.py
old/memory_bank/wrappers/: openai.py
old/scripts/: setup_ollama.py
scripts/: test_ollama.py
tests/: README.md  benchmark_cache.py  profile_performance.py  test_llama_server_wrapper.py  test_streaming.py
