[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memlayer"
version = "0.1.1"
description = "The memory layer for LLMs - add persistent, intelligent memory to any LLM in minutes."
readme = "README.md"
authors = [{ name = "Divyansh Agrawal", email = "keshav.r.1925@gmail.com" }]
maintainers = [{ name = "Divyansh Agrawal", email = "keshav.r.1925@gmail.com" }]
license = "MIT"
keywords = [
    "llm", 
    "memory", 
    "ai", 
    "ml",
    "rag",
    "artificial-intelligence",
    "machine-learning",
    "deep-learning",
    "openai", 
    "claude", 
    "gemini", 
    "ollama",
    "anthropic",
    "gpt",
    "chatbot",
    "conversational-ai",
    "assistant",
    "agent",
    "ai-agent",
    "persistent-memory",
    "context-management",
    "ai-memory",
    "llm-memory",
    "memory-layer",
    "stateful-llm",
    "conversation-memory",
    "long-term-memory",
    "knowledge-graph", 
    "vector-search",
    "vector-database",
    "vector-store",
    "embedding",
    "embeddings",
    "semantic-search",
    "similarity-search",
    "hybrid-search",
    "rag",
    "retrieval",
    "retrieval-augmented-generation",
    "chromadb",
    "networkx",
    "graph-database",
    "nlp",
    "natural-language-processing",
    "text-processing",
    "language-model",
    "serverless",
    "production-ready",
    "scalable",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: Web Environment",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.12.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "chromadb>=0.4.22",
    "gqlalchemy>=1.5.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.1",
    "anthropic>=0.72.1",
    "google-genai>=1.50.0",
    "python-dateutil>=2.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/divagr18/memlayer"
Repository = "https://github.com/divagr18/memlayer"
Documentation = "https://github.com/divagr18/memlayer#readme"
Issues = "https://github.com/divagr18/memlayer/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["memlayer*"]
exclude = ["tests*", "examples*", "docs*", "*.egg-info*", "__pycache__*"]

[tool.setuptools.package-data]
memlayer = ["py.typed"]