[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memlayer"
version = "0.1.8"
description = "The memory layer for LLMs — add persistent, intelligent memory to any model in minutes."
readme = "README.md"
authors = [{ name = "Divyansh Agrawal", email = "keshav.r.1925@gmail.com" }]
maintainers = [{ name = "Divyansh Agrawal", email = "keshav.r.1925@gmail.com" }]
license = "MIT"
requires-python = ">=3.10"

keywords = [
    "llm",
    "memory",
    "persistent-memory",
    "long-term-memory",
    "conversation-memory",
    "context-management",
    "context-window",
    "stateful-llm",
    "memory-layer",
    "llm-memory",
    "vector-search",
    "semantic-search",
    "similarity-search",
    "embeddings",
    "embedding-store",
    "vector-database",
    "knowledge-graph",
    "hybrid-search",
    "retrieval",
    "retrieval-augmented-generation",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: Web Environment",
]

dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.12.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "chromadb>=0.4.22",
    "gqlalchemy>=1.5.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.1",
    "anthropic>=0.72.1",
    "google-genai>=1.50.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/divagr18/memlayer"
Repository = "https://github.com/divagr18/memlayer"
Documentation = "https://github.com/divagr18/memlayer#readme"
Issues = "https://github.com/divagr18/memlayer/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["memlayer*"]
exclude = ["tests*", "examples*", "docs*", "*.egg-info*", "__pycache__*"]

[tool.setuptools.package-data]
memlayer = ["py.typed"]
